[package]
name = "ux-webmachine"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>", "Ronald Holshausen <uglyog@gmail.com>"]
description = "Port of the Ruby Webmachine library to Rust"
documentation = "https://docs.rs/ux-webmachine"
homepage = "https://github.com/angular-rust/ux-webmachine"
repository = "https://github.com/angular-rust/ux-webmachine"
readme = "README.md"
keywords = ["webmachine"]
license = "MIT"
edition = "2018"

[lib]
name = "webmachine"

[dependencies]
log = "0.4.8"
maplit = "1.0.1"
itertools = "0.10.0"
lazy_static = "1.4.0"
chrono = "0.4.15"
serde = "1.0.98"
serde_json = "1.0.40"
http = "0.2.1"
hex = "0.4.2"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
tokio = { version = "1", features = ["macros"] }
env_logger = "0.9.0"
wampire = { version = "0.1.2" }

[dev-dependencies]
expectest = "0.12.0"
tokio-test = "0.4"
